update z-index value for overlay in Styles.css to ensure proper layering

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -142,7 +142,7 @@ input[type="email"] {
         align-items: center ;
         text-align: center;
         background: rgba(0,0,0,0);
-        z-index: 0; /* Ensures overlay is above other elements */
+        z-index: -1; /* Ensures overlay is above other elements */
         position: fixed; /* Ensures overlay is positioned above */
     }
 }
